methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:6: error: not found: value color
      faireV1(color.YELLOW)
              ^MethodsPicture:7: error: not found: value color
      faireV1(color.RED)
              ^MethodsPicture:8: error: not found: value color
      faireV1(color.BLUE)
              ^MethodsPicture:9: error: not found: value color
      faireV1(color.GREEN)
              ^